Lets Fucking Break Germany SHEEH
- :trollface:
- :trollface:
- :trollface:
focus, events, gfx, ideas the usual stuff oh and locals

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -48,6 +48,8 @@
   PB_GER_Prussian_Separatism_desc:0 "Since the defeat of the Prussian Kingdom during the Wars of Austrian Consolidation, the Easternmost territories of the Empire remain the most rebellious. Eastern Germany and Prussia remain a hotbed of ultranationalist sentiments, with the Prussian Freikorps, or Free Corps, a constant problem with the local authorities. These hyper-reactionary militias frequently come into conflict with both the police and leftist political leaders, leading Eastern Germany to gain a reputation for being unstable and dangerous."
   PB_GER_Great_War_Victor:0 "Enough Dead Heroes for the End of Time"
   PB_GER_Great_War_Victor_desc:0 "Germany stood among the victors of the Great War, further cementing the nation as one of the preeminent world powers and finally breaking the perfidious Bourbons. Yet, more than a decade later many are still war weary. Germany suffered tremendous losses throughout the war, with millions laying down their lives in the trenches of Flanders and Alsace to achieve victory. Germany took their place in the sun, but for many, there are enough dead heroes buried in Flanders' fields for the end of time."
+  PB_GER_War_Fever:0 "German War Spirit"
+  PB_GER_War_Fever_desc:0 "German War Spirit"
   PB_GER_Economic_Depression_Recovery_1:0 "Beginnings of Recovery"
   PB_GER_Economic_Depression_Recovery_2:0 "Continuing Recovery"
   PB_GER_Economic_Depression_Recovery_3:0 "Near Complete Recovery"
@@ -969,7 +971,7 @@
   GER_Elsass_Unrest_Increase_Five_tt:0 "§YAlsatian Unrest will be increased by§! §R5§!\n"
   GER_Frankfurt_Unrest_Increase_Five_tt:0 "§YHessian Unrest will be increased by§! §R5§!\n"
 
- GER_Rhineland_Unrest_Increase_Ten_tt:0 "§YRhenish Unrest will be increased by§! §R10§!\n"
+  GER_Rhineland_Unrest_Increase_Ten_tt:0 "§YRhenish Unrest will be increased by§! §R10§!\n"
   GER_Brandenburg_Unrest_Increase_Ten_tt:0 "§YBrandenburger Unrest will be increased by§! §R10§!\n"
   GER_Bavaria_Unrest_Increase_Ten_tt:0 "§YBavarian Unrest will be increased by§! §R10§!\n"
   GER_Saxony_Unrest_Increase_Ten_tt:0 "§YSaxon Unrest will be increased by§! §R10§!\n"
@@ -977,6 +979,33 @@
   GER_Austria_Unrest_Increase_Ten_tt:0 "§YAustrian Unrest will be increased by§! §R10§!\n"
   GER_Elsass_Unrest_Increase_Ten_tt:0 "§YAlsatian Unrest will be increased by§! §R10§!\n"
   GER_Frankfurt_Unrest_Increase_Ten_tt:0 "§YHessian Unrest will be increased by§! §R10§!\n"
+
+  GER_Rhineland_Unrest_Increase_Fiveteen_tt:0 "§YRhenish Unrest will be increased by§! §R15§!\n"
+  GER_Brandenburg_Unrest_Increase_Fiveteen_tt:0 "§YBrandenburger Unrest will be increased by§! §R15§!\n"
+  GER_Bavaria_Unrest_Increase_Fiveteen_tt:0 "§YBavarian Unrest will be increased by§! §R15§!\n"
+  GER_Saxony_Unrest_Increase_Fiveteen_tt:0 "§YSaxon Unrest will be increased by§! §R15§!\n"
+  GER_Hannover_Unrest_Increase_Fiveteen_tt:0 "§YHannoverian Unrest will be increased by§! §R15§!\n"
+  GER_Austria_Unrest_Increase_Fiveteen_tt:0 "§YAustrian Unrest will be increased by§! §R15§!\n"
+  GER_Elsass_Unrest_Increase_Fiveteen_tt:0 "§YAlsatian Unrest will be increased by§! §R15§!\n"
+  GER_Frankfurt_Unrest_Increase_Fiveteen_tt:0 "§YHessian Unrest will be increased by§! §R15§!\n"
+
+  GER_Rhineland_Unrest_Increase_Twenty_tt:0 "§YRhenish Unrest will be increased by§! §R20§!\n"
+  GER_Brandenburg_Unrest_Increase_Twenty_tt:0 "§YBrandenburger Unrest will be increased by§! §R20§!\n"
+  GER_Bavaria_Unrest_Increase_Twenty_tt:0 "§YBavarian Unrest will be increased by§! §R20§!\n"
+  GER_Saxony_Unrest_Increase_Twenty_tt:0 "§YSaxon Unrest will be increased by§! §R20§!\n"
+  GER_Hannover_Unrest_Increase_Twenty_tt:0 "§YHannoverian Unrest will be increased by§! §R20§!\n"
+  GER_Austria_Unrest_Increase_Twenty_tt:0 "§YAustrian Unrest will be increased by§! §R20§!\n"
+  GER_Elsass_Unrest_Increase_Twenty_tt:0 "§YAlsatian Unrest will be increased by§! §R20§!\n"
+  GER_Frankfurt_Unrest_Increase_Twenty_tt:0 "§YHessian Unrest will be increased by§! §R20§!\n"
+
+  GER_Rhineland_Unrest_Increase_Twentyfive_tt:0 "§YRhenish Unrest will be increased by§! §R25§!\n"
+  GER_Brandenburg_Unrest_Increase_Twentyfive_tt:0 "§YBrandenburger Unrest will be increased by§! §R25§!\n"
+  GER_Bavaria_Unrest_Increase_Twentyfive_tt:0 "§YBavarian Unrest will be increased by§! §R25§!\n"
+  GER_Saxony_Unrest_Increase_Twentyfive_tt:0 "§YSaxon Unrest will be increased by§! §R25§!\n"
+  GER_Hannover_Unrest_Increase_Twentyfive_tt:0 "§YHannoverian Unrest will be increased by§! §R25§!\n"
+  GER_Austria_Unrest_Increase_Twentyfive_tt:0 "§YAustrian Unrest will be increased by§! §R25§!\n"
+  GER_Elsass_Unrest_Increase_Twentyfive_tt:0 "§YAlsatian Unrest will be increased by§! §R25§!\n"
+  GER_Frankfurt_Unrest_Increase_Twentyfive_tt:0 "§YHessian Unrest will be increased by§! §R25§!\n"
 
   GER_All_Unrest_Reduce_Five_tt:0 "§YAll Unrest will be reduced by§! §G5§!\n"
   GER_All_Unrest_Reduce_Ten_tt:0 "§YAll Unrest will be reduced by§! §G10§!\n"
