--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -50,6 +50,9 @@
   PB_GER_Great_War_Victor_desc:0 "Germany stood among the victors of the Great War, further cementing the nation as one of the preeminent world powers and finally breaking the perfidious Bourbons. Yet, more than a decade later many are still war weary. Germany suffered tremendous losses throughout the war, with millions laying down their lives in the trenches of Flanders and Alsace to achieve victory. Germany took their place in the sun, but for many, there are enough dead heroes buried in Flanders' fields for the end of time."
   PB_GER_War_Fever:0 "German War Spirit"
   PB_GER_War_Fever_desc:0 "German War Spirit"
+  PB_GER_War_Fever_2:0 "German War Spirit"
+  PB_GER_War_Fever_2_desc:0 "German War Spirit"
+  PB_GER_Aristocracy_Corruption:0 "Rewards for the Aristocracy"
   PB_GER_Economic_Depression_Recovery_1:0 "Beginnings of Recovery"
   PB_GER_Economic_Depression_Recovery_2:0 "Continuing Recovery"
   PB_GER_Economic_Depression_Recovery_3:0 "Near Complete Recovery"
@@ -88,6 +91,10 @@
   PB_GER_Libertine_Culture_2_desc:0 "Germany's reputation as a cultural melting pot continues into modernity. With the liberalizing reforms of Kaiser Rudolf, starkly contrasted with the conservatism of his father, Germany has become a beacon of social, scientific and cultural progress in a Europe which is increasingly hostile to those ideas. The mass exodus of refugees from Russia and France has created a vibrant, unflinchingly internationalist cultural landscape."
   PB_GER_Libertine_Culture_3:0 "Libertine Culture"
   PB_GER_Libertine_Culture_3_desc:0 "Germany's reputation as a cultural melting pot continues into modernity. With the liberalizing reforms of Kaiser Rudolf, starkly contrasted with the conservatism of his father, Germany has become a beacon of social, scientific and cultural progress in a Europe which is increasingly hostile to those ideas. The mass exodus of refugees from Russia and France has created a vibrant, unflinchingly internationalist cultural landscape."
+  PB_GER_Libertine_Culture_Resistance:0 "Libertine Resistance"
+  PB_GER_Libertine_Culture_Resistance_desc:0 "The Young Liberal Generation which has been increasing in the last decade is one of our greatest adversaries we face. They represent the worst of human life, unchangelled human freedom which rots away any manners or patriotism. We have to make sure that this cultural melting pot will have to fade away."
+  PB_GER_Traditional_Values:0 "Traditional Values"
+  PB_GER_Traditional_Values_desc:0 "Traditional Values"
   PB_GER_Political_Violence_0:0 "Significant Political Violence"
   PB_GER_Political_Violence_0_desc:0 "Though Germany achieved near total victory in the Great War, the aftermath has been anything but victorious. With the economy in shambles, ill-intentioned radicals are stirring up trouble throughout the fatherland. Jacobin revolutionaries speak to packed coffee houses, spouting the doctrine of revolution and socialist utopia. Hardline nationalists pour into the beer halls of Bavaria and Berlin, eager to denounce everything from the Jacobins to the Jews. Outbreaks of political violence are not uncommon and thus far the administration has been unwilling to crack down on them openly for fear of exacerbating the issue."
   PB_GER_Political_Violence_Black:0 "The Brown Resistance"
@@ -744,9 +751,17 @@
   germany.61.d:0 ""
   germany.61.a:0 "Long Live Franz Ferdinand"
 
+  germany.62.t:0 "A Talk with the Kaiser"
+  germany.62.d:0 ""
+  germany.62.a:0 ""
+
   germany.70.t:0 "A Response to Mister Hugenberg's Remarks Regarding the Jewish People"
   germany.70.d:0 "Slogans and anti-semetic slander filled the halls of the German government as the Chancellor stood his place at the podium. Rathenau waited patiently for these voices of discontent to stay silent, his gaze searched through the Reichstag before falling upon Hungenberg for a brief moment. And then, the Chancellor began his response:\n\n“Honourable and noble members of this Diet, you have heard very...colourful terms used in response to one of our most recent pieces of legislation, talk of spies and conspiracy amongst the Jewish population of our nation, especially from the right honourable Hugenberg. But I come to you requesting a chance to speak and offer my perspective on our nation’s actions. And fortunately I have been granted an opportunity to do so.\n\nMany of those who do not approve of the actions of our government claim that Jews are traitors, thieves, with more than a few of them disputing their very humanity, along with their citizenship and the status of this land as their home. You call us traitors and cowards, but ignore our sacrifices during the war. Hundreds if not thousands of Jews volunteered, giving life and limb for Germany. You claim we have taken our money, while it is Jewish businesses contribute to our economy. And you say that Germany is not our land, that there is no greater honour than driving us out. But we have lived here for centuries, long before any of you were born. Even in the days of the Holy Roman Empire, my people were here, we have earned our place in Germany.\n\nYou claim that such beliefs and practices are noble, but where is the honour in driving away honest hard working people who sacrificed everything for a country that brates them! That does everything they can to fix our ailing economy, just as any other German would! All while you ignore the storm clouds forming over Europe, the Revanchism of France grows as it eyes to absorb our territory. If you truly cared for Germany, you would see the real threat rather than chasing make believe boogeymen who only exist in your imagination! Bring us together, instead of dividing us apart.”\n\nThe ministers and politicians cheered, waving the flags of Germany, celebrating this speech as a victory in itself. Over the tide of anti-semitism, as Rathenau looked out to the crowd, he could see the quiet fury of Hungenberg, he knew this would be an uphill battle. But this was a start."
   germany.70.a:0 "Germans! Here we stand!"
+
+  germany.71.t:0 "A Clash of Ideals"
+  germany.71.d:0 ""
+  germany.71.a:0 ""
 
   germany.120.t:0 "Movement on the German Border"
   germany.120.d:0 "We have received several reports from the border that suspiscouc army movements have been seen on the other side of the German Border.\nIt seems like the Reactionary Governemnt in Germany intends to challenge our Republic. We must be ready for the coming storm."
@@ -1012,12 +1027,12 @@
   GER_All_Unrest_Reduce_Fiveteen_tt:0 "§YAll Unrest will be reduced by§! §G15§!\n"
   GER_All_Unrest_Reduce_Twenty_tt:0 "§YAll Unrest will be reduced by§! §G20§!\n"
 
-  GER_All_Unrest_Increase_Five_tt:0 "§YAll Unrest will be increased by§! §R5%§!\n"
-  GER_All_Unrest_Increase_Ten_tt:0 "§YAll Unrest will be increased by§! §R10%§!\n"
-  GER_All_Unrest_Increase_Twenty_tt:0 "§YAll Unrest will be increased by§! §R20%§!\n"
+  GER_All_Unrest_Increase_Five_tt:0 "§YAll Unrest will be increased by§! §R5§!\n"
+  GER_All_Unrest_Increase_Ten_tt:0 "§YAll Unrest will be increased by§! §R10§!\n"
+  GER_All_Unrest_Increase_Twenty_tt:0 "§YAll Unrest will be increased by§! §R20§!\n"
 
-  PB_GER_All_Unrest_Under_Fifty_tooltip:0 "§YUnrest in all Volksstaaten is below§! §R50%§!\n"
-  PB_GER_All_Unrest_Under_25_tooltip:0 "§YUnrest in all Volksstaaten is below§! §R25%§!\n"
+  PB_GER_All_Unrest_Under_Fifty_tooltip:0 "§YUnrest in all Volksstaaten is below§! §R50§!\n"
+  PB_GER_All_Unrest_Under_25_tooltip:0 "§YUnrest in all Volksstaaten is below§! §R25§!\n"
   GER_Unrest_Cleared:0 "§YUnrest in all Volksstaaten is permanently cleared§!\n"
 
   PB_GER_Event_Unrest_Fifty_Fifty:0 "There is a §Y50%§! chance that unrest in this province will be reduced by 10% and a §Y50%§! that unrest will increase by 10%"
@@ -1111,22 +1126,22 @@
  GER_Federation_cn_ADJ:0 "German"
  GER_Federation_an_ADJ:0 "German"
 
- GER_Empire_ni:0 "German Empire"
- GER_Empire_ni_DEF:0 "German Empire"
- GER_Empire_ds:0 "German Empire"
- GER_Empire_ds_DEF:0 "German Empire"
- GER_Empire_rc:0 "German Empire"
- GER_Empire_rc_DEF:0 "German Empire"
- GER_Empire_an:0 "German Empire"
- GER_Empire_an_DEF:0 "German Empire"
- GER_Empire_cn:0 "German Empire"
- GER_Empire_cn_DEF:0 "German Empire"
- GER_Empire_lb:0 "German Empire"
- GER_Empire_lb_DEF:0 "German Empire"
- GER_Empire_ss:0 "German Empire"
- GER_Empire_ss_DEF:0 "German Empire"
- GER_Empire_jc:0 "German Empire"
- GER_Empire_jc_DEF:0 "German Empire"
+ GER_Empire_ni:0 "German Reich"
+ GER_Empire_ni_DEF:0 "German Reich"
+ GER_Empire_ds:0 "German Reich"
+ GER_Empire_ds_DEF:0 "German Reich"
+ GER_Empire_rc:0 "German Reich"
+ GER_Empire_rc_DEF:0 "the German Reich"
+ GER_Empire_an:0 "German Reich"
+ GER_Empire_an_DEF:0 "German Reich"
+ GER_Empire_cn:0 "German Reich"
+ GER_Empire_cn_DEF:0 "German Reich"
+ GER_Empire_lb:0 "German Reich"
+ GER_Empire_lb_DEF:0 "the sGerman Reich"
+ GER_Empire_ss:0 "German Reich"
+ GER_Empire_ss_DEF:0 "German Reich"
+ GER_Empire_jc:0 "GermanReich"
+ GER_Empire_jc_DEF:0 "German Reich"
  GER_Empire_ni_ADJ:0 "German"
  GER_Empire_rc_ADJ:0 "German"
  GER_Empire_lb_ADJ:0 "German"
