--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -3,6 +3,33 @@
   ##########################
   #POP HAPPINESS
   ##########################
+
+  PB_RUS_Annexation_Mechanic:0 "Consolidating Russia"
+  PB_RUS_Annexation_Mechanic_desc:0 "\n\n\n\n\n\nFrom 1547 and onwards Russia has been home to numerous ethnicities. From Tatars, to Kalmyks many people have called the Russian realm home and it seems that heterogeneity is simply a part of her nature. As time has gone by new lands have been conquered and devoured by the bear, some lands have proved more troublesome than others and efforts must be made to fully integrate these territories into Russia. While this will be no simple feat it is however neccesary, if Russia is to truely reach new heights then she must evolve.\n\n£GFX_territory_icon  Baltic Annexation Percentage: §Y[?RUS_BAL_ANNEX_PERCENT]%§!\n\n£GFX_territory_icon  Poland Annexation Percentage: §Y[?RUS_POL_ANNEX_PERCENT]%§!\n\n£GFX_territory_icon  Finland Annexation Percentage: §Y[?RUS_FIN_ANNEX_PERCENT]%§!\n\n£GFX_territory_icon  Caucasus Annexation Percentage: §Y[?RUS_TRS_ANNEX_PERCENT]%§!\n"
+  PB_RUS_BAL_Annexation_Increase:0 "Baltic Integration Efforts"
+  PB_RUS_POL_Annexation_Increase:0 "Polish Integration Efforts"
+  PB_RUS_FIN_Annexation_Increase:0 "Finnish Integration Efforts"
+  PB_RUS_TRS_Annexation_Increase:0 "Caucasian Integration Efforts"
+  PB_RUS_BAL_Annexation_Increase_tt:0 "Baltic Annexation Percentage §G+3%§!"
+  PB_RUS_POL_Annexation_Increase_tt:0 "Poland Annexation Percentage §G+3%§!"
+  PB_RUS_FIN_Annexation_Increase_tt:0 "Finland Annexation Percentage §G+3%§!"
+  PB_RUS_TRS_Annexation_Increase_tt:0 "Caucasus Annexation Percentage §G+3%§!"
+  PB_RUS_BAL_Annex:0 "Annex The Baltic Governate"
+  PB_RUS_POL_Annex:0 "Annex Congress Poland"
+  PB_RUS_FIN_Annex:0 "Annex The Finland Governate"
+  PB_RUS_TRS_Annex:0 "Annex The Caucasus Viceroyalty"
+  PB_RUS_BAL_Annex_tt:0 "Baltic Annexation Percentage = §Y100%§!"
+  PB_RUS_BAL_Annex_tt:0 "Poland Annexation Percentage = §Y100%§!"
+  PB_RUS_FIN_Annex_tt:0 "Finland Annexation Percentage = §Y100%§!"
+  PB_RUS_TRS_Annex_tt:0 "Caucasus Annexation Percentage = §Y100%§!"
+  PB_RUS_BAL_Annexation_Increase_ttt:0 "Baltic Annexation Percentage < §Y100%§!"
+  PB_RUS_POL_Annexation_Increase_ttt:0 "Poland Annexation Percentage < §Y100%§!"
+  PB_RUS_FIN_Annexation_Increase_ttt:0 "Finland Annexation Percentage < §Y100%§!"
+  PB_RUS_TRS_Annexation_Increase_ttt:0 "Caucasus Annexation Percentage < §Y100%§!"
+
+  ##########################
+  #POP HAPPINESS
+  ##########################
   PB_RUS_Nobility_Satisfaction_Growth_1.5_tt:0 "Nobility Satisfaction Growth Will Change By §G+1.5§!"
   PB_RUS_Nobility_Satisfaction_Growth_1_tt:0 "Nobility Satisfaction Growth Will Change By §G+1§!"
   PB_RUS_Nobility_Satisfaction_Growth_0.5_tt:0 "Nobility Satisfaction Growth Will Change By §G+0.5§!"
@@ -219,6 +246,7 @@
   PB_RUS_aftermath_of_the_nationalist_revolts_3:0 "Broken Dreams"
   PB_RUS_aftermath_of_the_nationalist_revolts_4:0 "Rape, Pillage, And Conquer"
   PB_RUS_BH_Military_Integration:0 "BH-Military Integration"
+  PB_RUS_aftermath_of_the_nationalist_revolts_tamed:0 "Forced Cohesion"
 
   ##########################
   # EVENTS
@@ -266,7 +294,46 @@
 
   Russian.11.t:0 "Father, Im Terrified"
   Russian.11.d:0 ""
-  Russian.11.a:0 "You Will Do Well Son"
+  Russian.11.a:0 "You Will Do Well Son"3
+
+  Russian.12.t:0 "The Baltic Governate"
+  Russian.12.d:0 ""
+  Russian.12.a:0 "Russia Grows Stronger"
+
+  Russian.13.t:0 "Russia Requests Baltic Annexation"
+  Russian.13.d:0 ""
+  Russian.13.a:0 "Ok"
+  Russian.13.b:0 "No"
+
+  Russian.14.t:0 "Congress Poland"
+  Russian.14.d:0 ""
+  Russian.14.a:0 "Russia Grows Stronger"
+
+  Russian.15.t:0 "Russia Requests Polish Annexation"
+  Russian.15.d:0 ""
+  Russian.15.a:0 "No"
+
+  Russian.16.t:0 "The Polish Revolt"
+  Russian.16.d:0 ""
+  Russian.16.a:0 "Wait What?"
+
+  Russian.17.t:0 "The Finnish Governate"
+  Russian.17.d:0 ""
+  Russian.17.a:0 "Russia Grows Stronger"
+
+  Russian.18.t:0 "Russia Requests Finnish Annexation"
+  Russian.18.d:0 ""
+  Russian.18.a:0 "Ok"
+  Russian.18.b:0 "No"
+
+  Russian.19.t:0 "The Caucasus Viceroyalty"
+  Russian.19.d:0 ""
+  Russian.19.a:0 "Russia Grows Stronger"
+
+  Russian.20.t:0 "Russia Requests Caucasian Annexation"
+  Russian.20.d:0 ""
+  Russian.20.a:0 "Ok"
+  Russian.20.b:0 "No"
 
   ##########################
   # GUI DESCRIPTIONS
@@ -343,7 +410,7 @@
   PB_RUS_Reassure_The_Officers_desc:0 ""
   PB_RUS_Redefine_Monarchism:0 "Redefine Monarchism"
   PB_RUS_Redefine_Monarchism_desc:0 "" 
-  PB_RUS_Hunt_The_Weak:0 "Hunt The Weak"
+  PB_RUS_Hunt_The_Weak:0 "A Eurasian Identity"
   PB_RUS_Hunt_The_Weak_desc:0 ""
   PB_RUS_Loyalty_Can_Be_Brought:0 "Loyalty Can Be Brought"
   PB_RUS_Loyalty_Can_Be_Brought_desc:0 ""
@@ -397,4 +464,5 @@
   RUS_Military_Government_Puppet_FIN:0 "Russian Military Administration In Finland"
   RUS_Military_Government_Puppet_TRS:0 "Caucasus Viceroyalty"
   RUS_Military_Government_Puppet_ASK:0 "Novorossiya"
+  POL_Revolt:0 "Polish Peasants And Workers Republic"
   
