German Gfx and some other stuff :trollface: :
- portraits
- focus changes
- gfx
- locals
- actually a lot

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -749,19 +749,19 @@
 
   germany.61.t:0 "A New Kaiser - A New Beginning"
   germany.61.d:0 ""
-  germany.61.a:0 "Long Live Franz Ferdinand"
+  germany.61.a:0 "Long Live Franz Ferdinand the Second"
 
   germany.62.t:0 "A Talk with the Kaiser"
   germany.62.d:0 ""
-  germany.62.a:0 ""
+  germany.62.a:0 "Germany will be revived in Body and Soul"
 
   germany.70.t:0 "A Response to Mister Hugenberg's Remarks Regarding the Jewish People"
   germany.70.d:0 "Slogans and anti-semetic slander filled the halls of the German government as the Chancellor stood his place at the podium. Rathenau waited patiently for these voices of discontent to stay silent, his gaze searched through the Reichstag before falling upon Hungenberg for a brief moment. And then, the Chancellor began his response:\n\n“Honourable and noble members of this Diet, you have heard very...colourful terms used in response to one of our most recent pieces of legislation, talk of spies and conspiracy amongst the Jewish population of our nation, especially from the right honourable Hugenberg. But I come to you requesting a chance to speak and offer my perspective on our nation’s actions. And fortunately I have been granted an opportunity to do so.\n\nMany of those who do not approve of the actions of our government claim that Jews are traitors, thieves, with more than a few of them disputing their very humanity, along with their citizenship and the status of this land as their home. You call us traitors and cowards, but ignore our sacrifices during the war. Hundreds if not thousands of Jews volunteered, giving life and limb for Germany. You claim we have taken our money, while it is Jewish businesses contribute to our economy. And you say that Germany is not our land, that there is no greater honour than driving us out. But we have lived here for centuries, long before any of you were born. Even in the days of the Holy Roman Empire, my people were here, we have earned our place in Germany.\n\nYou claim that such beliefs and practices are noble, but where is the honour in driving away honest hard working people who sacrificed everything for a country that brates them! That does everything they can to fix our ailing economy, just as any other German would! All while you ignore the storm clouds forming over Europe, the Revanchism of France grows as it eyes to absorb our territory. If you truly cared for Germany, you would see the real threat rather than chasing make believe boogeymen who only exist in your imagination! Bring us together, instead of dividing us apart.”\n\nThe ministers and politicians cheered, waving the flags of Germany, celebrating this speech as a victory in itself. Over the tide of anti-semitism, as Rathenau looked out to the crowd, he could see the quiet fury of Hungenberg, he knew this would be an uphill battle. But this was a start."
   germany.70.a:0 "Germans! Here we stand!"
 
   germany.71.t:0 "A Clash of Ideals"
-  germany.71.d:0 ""
-  germany.71.a:0 ""
+  germany.71.d:0 "Germany has changed, and not for the better. Before Kaiser Rudolf, we were a strong and unified culture. One that valued tradition and faith, we enjoyed German music and German food. Women knew their place, taking care of the children and cooking the meals for those hard-working men who provided for their families.\n\nNow, the old fool has allowed our society to be corrupted. Those fleeing France and Russia turn up at our nation’s doorstep, bringing with them Russia’s drunken toxins and France’s horrific taste in cinema. Women roam the streets, smoking and drinking while flaunting around their hair and bodies like prostitutes. With each passing day, it seemed like our once glorious nation was doomed towards decadence, corruption and anarchism.\n\nBut now, we have a fighting chance to save Germany. Action must be taken to ensure this corrupting ideology be swept aside to pave the way for a united and strong Germany, like was formed in the aftermath of the Franco-German War of 1870. There is to be resistance of course, from people who desperately hold onto their way of life even as it rots them. But we will show them the way."
+  germany.71.a:0 "Whether they want it or not"
 
   germany.120.t:0 "Movement on the German Border"
   germany.120.d:0 "We have received several reports from the border that suspiscouc army movements have been seen on the other side of the German Border.\nIt seems like the Reactionary Governemnt in Germany intends to challenge our Republic. We must be ready for the coming storm."
@@ -965,17 +965,23 @@
   GER_Concessions_to_Elsass:0 "[ELT.GetFlag] Concessions to Elsass"
   GER_Concessions_to_Frankfurt:0 "[FRK.GetFlag] Concessions to Frankfurt"
 
-  GER_Rhineland_Unrest_Reduce_Five_tt:0 "§YRhenish Unrest will be reduced by§! §G5%§!\n"
-  GER_Brandenburg_Unrest_Reduce_Five_tt:0 "§YBrandenburger Unrest will be reduced by§! §G5%§!\n"
-  GER_Bavaria_Unrest_Reduce_Five_tt:0 "§YBavarian Unrest will be reduced by§! §G5%§!\n"
-  GER_Saxony_Unrest_Reduce_Five_tt:0 "§YSaxon Unrest will be reduced by§! §G5%§!\n"
-  GER_Hannover_Unrest_Reduce_Five_tt:0 "§YHannoverian Unrest will be reduced by§! §G5%§!\n"
+  GER_Rhineland_Unrest_Reduce_Five_tt:0 "§YRhenish Unrest will be reduced by§! §G5§!\n"
+  GER_Brandenburg_Unrest_Reduce_Five_tt:0 "§YBrandenburger Unrest will be reduced by§! §G5§!\n"
+  GER_Bavaria_Unrest_Reduce_Five_tt:0 "§YBavarian Unrest will be reduced by§! §G5§!\n"
+  GER_Saxony_Unrest_Reduce_Five_tt:0 "§YSaxon Unrest will be reduced by§! §G5§!\n"
+  GER_Hannover_Unrest_Reduce_Five_tt:0 "§YHannoverian Unrest will be reduced by§! §G5§!\n"
+  GER_Austria_Unrest_Reduce_Five_tt:0 "§YAustrian Unrest will be reduced by§! §G5§!\n"
+  GER_Elsass_Unrest_Reduce_Five_tt:0 "§YAlsatian Unrest will be reduced by§! §G5§!\n"
+  GER_Frankfurt_Unrest_Reduce_Five_tt:0 "§YHessian Unrest will be reduced by§! §G5§!\n"
 
-  GER_Rhineland_Unrest_Reduce_Ten_tt:0 "§YRhenish Unrest will be reduced by§! §G10%§!\n"
-  GER_Brandenburg_Unrest_Reduce_Ten_tt:0 "§YBrandenburger Unrest will be reduced by§! §G10%§!\n"
-  GER_Bavaria_Unrest_Reduce_Ten_tt:0 "§YBavarian Unrest will be reduced by§! §G10%§!\n"
-  GER_Saxony_Unrest_Reduce_Ten_tt:0 "§YSaxon Unrest will be reduced by§! §G10%§!\n"
-  GER_Hannover_Unrest_Reduce_Ten_tt:0 "§YHannoverian Unrest will be reduced by§! §G10%§!\n"
+  GER_Rhineland_Unrest_Reduce_Ten_tt:0 "§YRhenish Unrest will be reduced by§! §G10§!\n"
+  GER_Brandenburg_Unrest_Reduce_Ten_tt:0 "§YBrandenburger Unrest will be reduced by§! §G10§!\n"
+  GER_Bavaria_Unrest_Reduce_Ten_tt:0 "§YBavarian Unrest will be reduced by§! §G10§!\n"
+  GER_Saxony_Unrest_Reduce_Ten_tt:0 "§YSaxon Unrest will be reduced by§! §G10§!\n"
+  GER_Hannover_Unrest_Reduce_Ten_tt:0 "§YHannoverian Unrest will be reduced by§! §G10§!\n"
+  GER_Austria_Unrest_Reduce_Ten_tt:0 "§YAustrian Unrest will be reduced by§! §G10§!\n"
+  GER_Elsass_Unrest_Reduce_Ten_tt:0 "§YAlsatian Unrest will be reduced by§! §G10§!\n"
+  GER_Frankfurt_Unrest_Reduce_Ten_tt:0 "§YHessian Unrest will be reduced by§! §G10§!\n"
 
   GER_Rhineland_Unrest_Increase_Five_tt:0 "§YRhenish Unrest will be increased by§! §R5§!\n"
   GER_Brandenburg_Unrest_Increase_Five_tt:0 "§YBrandenburger Unrest will be increased by§! §R5§!\n"
@@ -1137,7 +1143,7 @@
  GER_Empire_cn:0 "German Reich"
  GER_Empire_cn_DEF:0 "German Reich"
  GER_Empire_lb:0 "German Reich"
- GER_Empire_lb_DEF:0 "the sGerman Reich"
+ GER_Empire_lb_DEF:0 "the German Reich"
  GER_Empire_ss:0 "German Reich"
  GER_Empire_ss_DEF:0 "German Reich"
  GER_Empire_jc:0 "GermanReich"
