I've been busy today

--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -508,6 +508,18 @@
   PBNews.130.d:0 "Moscow has refused to release an official statement regarding their recent decision to sign a truce with Poland. Although Poland alternatively has made it very clear that it has just secured its independence after a brutal conflict with the Russian nation. Celebrations are being held all across the nation and a wave of national euphoria has taken over the nation. Józef Piłsudski has been hailed as a war hero and a national icon for his leadership in the Polish revolt, a statue in Warsaw has already been erected in his honour. "
   PBNews.130.a:0 "Never Would I Have Thought"
 
+  PBNews.131.t:0 "BALTIC GOVERNATE ANNEXED"
+  PBNews.131.d:0 "After months of intense Russification campaigns in the Baltic Governate Russia has officialy incorporated the territory and claimed it as one of her integral core lands. The Baltic Governate has always had a large Russian ethnic presence and official reports from Moscow have stated that the demographic population of these lands is overwhelming Russian. How the Baltic people have responded to the situation is unknown but rumours have surfaced that the Forest Brothers, a Baltic peoples militia group, are becoming increasingly hostile."
+  PBNews.131.a:0 "The Russian Bear Fills It's Belly"
+
+  PBNews.132.t:0 "FINNISH GOVERNATE ANNEXED"
+  PBNews.132.d:0 "Russia proudly announced early this morning that it had incorporated the Finnish Governate, justifying itself by stating that the Finland was an integral part of the Russian nation. Minor protests have occured in the Major Finnish city of Helsinki as a result of this provocation. Moscow has responded to such claims, stating that "These protestors are mere terrorists funded by the international Anglo order." Whatever little autonomy the Finnish Governate gave to its people is now dead in the water. "
+  PBNews.132.a:0 "The Russian Bear Fills It's Belly"
+
+  PBNews.133.t:0 "CAUCASUS GOVERNATE ANNEXED"
+  PBNews.133.d:0 "Russia's vacation puppet, the Caucasus Governate, has been recently annexed. Moscow has informed the public with soft, comfortating words about the incorporation of the puppet. In a show of unity Moscow has even funded local festivals to ease any possible tension between Russian's and non-Russians. The Bureaucrats and Aristocrats of Russia have voiced some minor concerns over the annexation, the location was a popular option for the upper class to move to during the summer months. Russia assured these individuals that nothing will change and that the move was simply an administrative one."
+  PBNews.133.a:0 "The Russian Bear Fills It's Belly"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
