More News Events

--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -524,6 +524,14 @@
   PBNews.134.d:0 "Dubbed Synth Classical this new genre of music composed by German extraordinaire Richard Strauss has capitivated both the British and German public with its rather odd but satisfying electrical tunes. Thousands regularly listen to Strauss'  Synth Classical album, "Resonance". While older and more traditional individuals have a certain dislike of this reimagined and redefined genre of music younger audiences simply can't get enough of it. Resonance has already set records and as of currently is the most listened album of this year in Germany."
   PBNews.134.a:0 "Cool Beats, Kid"
 
+  PBNews.135.t:0 "PROTESTS IN AUSTRALIE"
+  PBNews.135.d:0 "The unrest in the once French controlled colony of Australie has reached a boiling point. The continued abuse of human rights from German administrators have forced Australie-French citizens to organize a mass march in protest, the organizers and those participating have produced a list of demands which notably includes the removal of the German occupied city of Dutigalle as well as the return of Nouvelle-Bretagne to Australie. The protestors have made it very clear that if these demands are not met then they will continue their fight for Australie's independence from Germany."
+  PBNews.135.a:0 "For Once I Feel Sorry For The French"
+
+  PBNews.136.t:0 "RIOTS ACROSS AMERICA"
+  PBNews.136.d:0 "The continued abandoment of Great War veterans from previous and current administrations has left as sour taste in the American public's mouths. Ultimately culminating into violent riots across major American cities such as New York and Chicago, street shootouts between local authorities and Butlerite militias is an often occurrence and many are begging for the situation to reach a peaceful resolve. Some have even called the situation an all-out civil war. London hasn't made a public announcement on the manner but rumours have stated that westminster is less than pleased. "
+  PBNews.136.a:0 "America Divided"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
