Germany - Poland Interactions, Bernie Files
- increased content for german-polish interaction during the revolt and also after the revolts. those are mainly focused in the Russian Files which belong to you guys, hope everything is gucci.

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -492,7 +492,7 @@
   germany.3.a:0 "...Oh."
 
   germany.4.t:0 "Kaiser Rudolf Abdicates the Throne"
-  germany.4.d:0 "When the news reached the people, most did not know to respond.\n Confused? Sad? "Fearful of the Future?\n\nWhen was the last time a Kaiser Abdicated? Did it ever happen? Now people were remembering one important detail surrounding all of this. The Kaiser had only one heir, his daughter Elisabeth Marie.\n\nA woman. After 250 Years a woman would again come to bear the title of Kaiser. However everyone knew she would not become the next Maria Theresa. While personal friends often give her the nickname of 'Erzsi', the public and especially her greatest doubters call her the'Red Princess'. Elizabeth has made some years ago pubibly that she believes in the values of socialism, peace and unity. Despite being forbidden to join a party, she has several contacts and friends in the labour party and she herself organized food banks for poor people during this depression.\n\nDespite protests of several politicians, Rudolf insisted that she would suceed him as Kaiserin. And so when all Germans were able to see the coronation of their new Kaiserin on television, it is not unfounded to say that they had the same thoughts in those moments.\n\n What will happen now?"
+  germany.4.d:0 "When the news reached the people, most did not know to respond.\nConfused? Sad? "Fearful of the Future?\n\nWhen was the last time a Kaiser Abdicated? Did it ever happen? Now people were remembering one important detail surrounding all of this. The Kaiser had only one heir, his daughter Elisabeth Marie.\n\nA woman. After 250 Years a woman would again come to bear the title of Kaiser. However everyone knew she would not become the next Maria Theresa. While personal friends often give her the nickname of 'Erzsi', the public and especially her greatest doubters call her the'Red Princess'. Elizabeth has made some years ago pubibly that she believes in the values of socialism, peace and unity. Despite being forbidden to join a party, she has several contacts and friends in the labour party and she herself organized food banks for poor people during this depression.\n\nDespite protests of several politicians, Rudolf insisted that she would suceed him as Kaiserin. And so when all Germans were able to see the coronation of their new Kaiserin on television, it is not unfounded to say that they had the same thoughts in those moments.\n\n What will happen now?"
   germany.4.a:0 "A New Era for our Nation Begins"
 
   germany.5.t:0 "Prince Georg claims the German Throne"
@@ -805,6 +805,10 @@
   germany.129.d:0 ""
   germany.129.a:0 "We can not reject this offer."
 
+  germany.150.t:0 "A New Neighbour"
+  germany.150.d:0 ""
+  germany.150.a:0 "We have to stand together against the oncoming storm."
+
 
 
   ##########################
@@ -1102,6 +1106,8 @@
   GER_tt_rathenau_total_raw_maximising_production:0 "§YIn America and Great Britian their armament companies approved high effieceny programs to maximise production at all times. Those programs have seen great results and fit perfectly into our Total War System if we want to adopt them aswell.§!\n\nThe Next Phase of Total War gains \nFactory Output §G+5%§!\nStability §R-5%§!"
 
   GER_Unlock_Europe_Diplomatic_Decisions_Reactionary:0 "§YUnlocks§! £decision_icon_small Decisions to start our involvement in the Balkan Countries"
+
+  GER_Polish_Decisions_TT:0 "§YUnlocks§! £decision_icon_small Decisions to strengthen our relationship with the newly independent Poland"
 
   ##########################
   # COSMETIC TAGS
