--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -340,9 +340,10 @@
   Russian.20.b:0 "No"
 
   Russian.21.t:0 "Send Poland Support?"
-  Russian.21.d:0 ""
-  Russian.21.a:0 "We Can't Spare Anything"
+  Russian.21.d:0 "Poland is rebelling. This might one in a lifetime chance to greatly weaken the Russian Leviathan.\n\nMost of the people and politicians are sympathatic to the Polish Cause. Animosity between our people have largely ceased in the last decades. Rather we have come to see the Polish as victims of Russia's unhuman brutality and aggression and have welcomed Polish Exiles and Refugees so that they could spread their stories and rebuild their resistance.\n\nIn the last years the Empire has tried to fully reintragrate their Polish Administration and russianize the Polish Population. But the Polish are now fighting back again. The Revolt is larger then any other before and could truly suceed in regaining indepedence.\n\nThe Russians are on a timelimit if they do not crush the Revolt in 3 Months, political and global pressure will force them out of Poland. Some people in the government are pushing to send great amounts of supplies to the Polish in hopes to gain a new ally against the Russia. However not everyone is fully convinced of the chances of Polish Sucees and might see support as ineffective and pointless in the end."
+  Russian.21.a:0 "Our Polish Brothers will receive all the aid they need"
   Russian.21.b:0 "Anything To Hurt The Bear"
+  Russian.21.c:0 "We Can't Spare Anything"
 
   ##########################
   # GUI DESCRIPTIONS
