--- a/localisation/PB_Opinion_Modifiers_l_english.yml
+++ b/localisation/PB_Opinion_Modifiers_l_english.yml
@@ -13,3 +13,6 @@
   supported_our_government:0 "Supported Our Government"
   brothers_in_arms:0 "Brothers in Arms"
   tariffs:0 "Economic Tariffs Imposed"
+  POL_great_support_revolt:0 "Received Large Amount of Support during the Revolt"
+	POL_normal_support_revolt:0 "Received Considerable Amount of Support during the Revolt"
+	POL_no_support_revolt:0 "Received No Support during the Revolt"
