--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -251,6 +251,8 @@
   PB_RUS_aftermath_of_the_nationalist_revolts_tamed:0 "Forced Cohesion"
   PB_RUS_Monarchism_Redefined:0 "Monarchism Redefined"
   PB_RUS_Monarchism_Redefined_desc:0 ""
+  PB_RUS_Monarchism_Redefined_2:0 "Monarchism Redefined"
+  PB_RUS_Monarchism_Redefined_2_desc:0 ""
 
   ##########################
   # EVENTS
@@ -344,6 +346,11 @@
   Russian.21.a:0 "Our Polish Brothers will receive all the aid they need"
   Russian.21.b:0 "Anything To Hurt The Bear"
   Russian.21.c:0 "We Can't Spare Anything"
+
+  Russian.22.t:0 "All The kings Men"
+  Russian.22.d:0 ""
+  Russian.22.a:0 "Glad We Could Come To An Agreement"
+
 
   ##########################
   # GUI DESCRIPTIONS
